--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL = "mongodb+srv://root:root@progettofondamentiweb.brp2hnd.mongodb.net/warehouse?retryWrites=true&w=majority&appName=ProgettoFondamentiWeb"
-CLIENT_SECRET = "FzydnF3-HBoKzjNz8_VynlCgUXg71Vln7IyNyTJiNY5ma1G9l1RQKCPgBVCGVWBh"
-CLIENT_ID = "zRMhDP2zijRDFhZQXnde3PJewQhDDLJT"
-ISSUER_BASE_URL = "http://dev-8xr6cftsyhw0k2uw.us.auth0.com/"
+CLIENT_SECRET = "Z0pVtQ8AwvSqDVIlou7qYjh_OSQyPm8vtNyE0PEV2Oyqy4s2Mqc5W3cpEWeL6MxB"
+CLIENT_ID = "eVJ5R5p5Pvps84r21CaQTvawGWyxqdrf"
+ISSUER_BASE_URL = "https://dev-8xr6cftsyhw0k2uw.us.auth0.com/"
 PORT = 5555
 HOST = "localhost"
-CACHE_DIR = "cache/songs"
+CACHE_DIR = "cache/warehouses"
