--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "express": "^4.19.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "fs-extra": "^11.2.0",
+    "http": "^0.0.1-security",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5"
   }
 }
