--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
+    "path": "^0.12.7",
     "socket.io": "^4.7.5"
   }
 }
