--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,6 +1,3 @@
 FROM node:latest
 
-RUN apt-get update && apt-get upgrade -y
-
-RUN apt install net-tools -y
-RUN apt install iputils-ping -y
+RUN apt-get update && apt-get
